@@ -1,3 +1,8 @@
+2002-06-06  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 03206] Re: dict
+	* main.c (execdict): quote word
+
 2002-06-06  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03204] INET6
@@ -3464,4 +3469,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.384 2002/06/05 15:29:37 ukai Exp $
+$Id: ChangeLog,v 1.385 2002/06/05 15:42:10 ukai Exp $
